--- a/src/member_center/containers/member_card_setting/member_card_setting.less
+++ b/src/member_center/containers/member_card_setting/member_card_setting.less
@@ -338,6 +338,10 @@
 
 }
 .base-detail{
+  .style-gift{
+    color:@primary-color !important;
+    cursor: pointer;
+  }
   .detail-common-form-item{
     //margin-bottom: 0px;
     .ant-form-item-label{
