--- a/src/marketing_center/containers/banner_center/banner_center.less
+++ b/src/marketing_center/containers/banner_center/banner_center.less
@@ -52,7 +52,12 @@
         }
         .ant-form-item-control-wrapper{
           .field-width-limits{
-            width:50%;
+            width:60%;
+            .ant-calendar-picker-input{
+              .ant-calendar-range-picker-input{
+                width:76px;
+              }
+            }
           }
         }
 
@@ -194,6 +199,9 @@
         vertical-align: top;
         line-height: normal;
         padding-left: 5px;
+      }
+      .padding-textarea{
+        padding-left:11px !important;
       }
     }
     span{
