--- a/src/marketing_center/components/add_coupon.less
+++ b/src/marketing_center/components/add_coupon.less
@@ -217,7 +217,7 @@
       .ant-upload{
         img{
           width:104px;
-          height:104px;
+          //height:104px;
         }
       }
     }
@@ -228,7 +228,7 @@
       .ant-upload{
         img{
           width:104px;
-          height:104px;
+          //height:104px;
         }
       }
     }
