--- a/src/marketing_center/containers/banner_center/banner_center.less
+++ b/src/marketing_center/containers/banner_center/banner_center.less
@@ -1,6 +1,6 @@
 @import "../../../base/style/variables";
 
-.base-edit{
+.base-edit-notice{
   .content{
     margin-bottom:50px;
     .exhibition{
@@ -104,7 +104,7 @@
 
 }
 @media screen and (max-width: 768px) {
-  .base-edit{
+  .base-edit-notice{
     .ant-card{
       padding-left:10px;
     }
@@ -121,7 +121,7 @@
   }
 }
 @media screen and (max-width: 778px) {
-  .base-edit{
+  .base-edit-notice{
     .ant-card{
       padding-left:10px;
     }
@@ -141,7 +141,7 @@
   }
 }
 // 会员卡设置-编辑
-.base-edit {
+.base-edit-notice {
   margin-bottom: 40px;
   .computer-set{
     display: inline-block;
@@ -176,7 +176,7 @@
     color: @title-font-color;
   }
   .ant-card-body{
-    padding:0;
+    //padding:0;
   }
   .ant-form-item-label{
     text-align: right;
