--- a/src/member_center/containers/member_card_setting/member_card_setting.less
+++ b/src/member_center/containers/member_card_setting/member_card_setting.less
@@ -154,11 +154,17 @@
     .btn-fixed{
       margin-left: -200px;
     }
+    .ant-btn-primary{
+      margin-left:16px;
+    }
   }
   .mbr-btn-container-collapse{
     margin-left:80px;
     .btn-fixed{
       margin-left: -80px;
+    }
+    .ant-btn-primary{
+      margin-left:16px;
     }
   }
 
@@ -238,7 +244,7 @@
       .ant-upload{
         img{
           width:104px;
-          height:104px;
+          //height:104px;
         }
       }
     }
@@ -246,7 +252,7 @@
   .upload-img-container-logo{
     .gas-logo-show{
        width:104px;
-       height:104px;
+       //height:104px;
       margin-right:4px;
     }
     .ant-upload-select-picture-card{
@@ -254,7 +260,7 @@
       .ant-upload{
         img{
           width:104px;
-          height:104px;
+          //height:104px;
         }
       }
     }
@@ -500,6 +506,9 @@
       width: 100%;
       left: 0;
       margin-left:0;
+      .btn-fixed{
+        margin-left:10px;
+      }
     }
 
     .length-limit{
@@ -536,6 +545,9 @@
       width: 100%;
       left: 0;
       margin-left:0;
+      .btn-fixed{
+        margin-left:10px;
+      }
     }
 
   }
@@ -572,3 +584,16 @@
 }
 
 ::-webkit-scrollbar { width: 0px;}
+
+
+.mbr-card-container{
+  .ant-card{
+    .ant-card-head{
+      .ant-card-head-wrapper{
+        .ant-card-extra{
+          padding:13px 0;
+        }
+      }
+    }
+  }
+}
