--- a/src/member_center/containers/point_mall/components/goods_card/goods_card.less
+++ b/src/member_center/containers/point_mall/components/goods_card/goods_card.less
@@ -55,6 +55,18 @@
     color: white;
     cursor: pointer;
   }
+
+  .card-back-point{
+    background-size: cover;
+    height: 149px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
 }
 
 .starting {
