--- a/src/member_center/containers/point_mall/containers/record_and_verification.less
+++ b/src/member_center/containers/point_mall/containers/record_and_verification.less
@@ -28,7 +28,7 @@
   .goods-name-div {
     img {
       width: 31px;
-      height: 31px;
+      //height: 31px;
       margin-right: 10px;
     }
   }
