--- a/src/common/components/detail_show/detail_show.less
+++ b/src/common/components/detail_show/detail_show.less
@@ -53,7 +53,7 @@
       margin: 0;
       .show-img {
         width: 104px;
-        height: 104px;
+        //height: 104px;
       }
       .add-map {
         width: 260px !important;
@@ -86,7 +86,7 @@
       vertical-align: top;
       .show-img {
         width: 104px;
-        height: 104px;
+        //height: 104px;
       }
       .add-map {
         width: 260px !important;
